# unzipper-pro

./: .gitignore  AppIcon.icns  CMakeLists.txt  INSTALL.md  LICENSE  README.md  build.bat  build.sh
.github/workflows/: build.yml
src/: extractionworker.cpp  extractionworker.h  main.cpp  mainwindow.h  mainwindow_pro.cpp  settingsdialog.cpp  settingsdialog.h
